--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server"
+    "server": "nodemon server", 
+    "client": "npm start --prefix client", 
+    "start:dev": "concurrently \"npm run server\" \"npm run client\" ", 
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false  npm install --prefix client && npm run build --prefix client"
   },
   "repository": {
     "type": "git",
@@ -17,6 +20,7 @@
   },
   "homepage": "https://github.com/SalikChodhary/url-shortener#readme",
   "dependencies": {
+    "concurrently": "^5.2.0",
     "config": "^3.3.1",
     "express": "^4.17.1",
     "mongoose": "^5.9.20",
