--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node server.js",
     "server": "nodemon server", 
     "client": "npm start --prefix client", 
     "start:dev": "concurrently \"npm run server\" \"npm run client\" ", 
